# guppy

./: .gitignore  Cargo.toml  README.md  justfile  package.json  static_build.ts  tailwind.config.js
src/: db.rs  main.rs  markup.rs
src/api/: auth.rs
src/db/: guppydb.rs  mod.rs  sql.rs
src/pages/: auth.rs  base.rs  home.rs  mod.rs
static/: input.css  style.css
static/ts/editors/: SettingsEditor.ts
static/ts/pages/: AuthPages.ts  BoardView.ts  Footer.ts  NewBoard.ts  ProfileView.ts
templates/: base.html  dashboard.html  homepage.html
templates/auth/: activity_post.html  followers.html  following.html  login.html  login_secondary_token.html  register.html  user_profile.html  user_settings.html
