[package]
name = "guppy"
authors = ["hkau"]
license = "MIT"

version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
postgres = ["dorsal/postgres"]
mysql = ["dorsal/mysql"]
sqlite = ["dorsal/sqlite"]
default = ["dorsal/sqlite"]

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
askama = "0.12.1"
awc = { version = "3.4.0", features = ["rustls"] }
comrak = "0.22.0"
dorsal = { version = "0.1.3-1", default-features = false }
dotenv = "0.15.0"
env_logger = "0.11.3"
hex_fmt = "0.3.0"
redis = "0.25.2"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.115"
sha2 = "0.10.8"
uuid = { version = "1.8.0", features = ["v4"] }
shared = { version = "0.1.1", registry = "stellular" } # crates: disable-check
